chore(configurations): improve configuration errors handling